[project]
name = "envix"
version = "0.2.9"
description = "convinient secret manager."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ya7010", email = "ya7010@outlook.com" }]
dependencies = [
  "google-cloud-secret-manager >=2.19.0",
  "pydantic >=2.7.0",
  "python-dotenv >=1.0.1",
  "pyyaml >=6.0.1",
  "rich >=13.7.1",
  "rich-argparse >=1.4.0",
]

[project.scripts]
envix = "envix.cli.__main__:main"

[dependency-groups]
dev = [
  "pyright >=1.1.357",
  "pytest >=8.1.1",
  "pytest-asyncio >=0.24.0",
  "ruff >=0.11.12",
  "taskipy >=1.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
ci = "task format && task lint && task typecheck && task schemacheck && task test"
format = "ruff format ."
lint = "ruff check ."
schema = "envix config schema > schemas/config.json"
schemacheck = "python tasks/validate_config.py"
test = "pytest"
typecheck = "pyright src/** tests/**"
